[package]
name = "workerpool"
version = "1.0.3"
authors = ["The Rust Project Developers", "Corey Farwell <coreyf@rwell.org>", "Stefan Schindler <dns2utf8@estada.ch>", "Lucas Morales <lucas@lucasem.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucasem/workerpool"
homepage = "https://github.com/lucasem/workerpool"
documentation = "https://docs.rs/workerpool"
description = """
A thread pool for running a number of jobs on a fixed set of stateful worker threads.
"""
keywords = ["worker", "thread", "pool", "threading", "parallelism"]
categories = ["concurrency", "os"]

[dependencies]
num_cpus = "1.7"
