[package]
name = "workerpool"
version = "1.2.0"
authors = ["The Rust Project Developers", "Corey Farwell <coreyf@rwell.org>", "Stefan Schindler <dns2utf8@estada.ch>", "Lucas Morales <lucas@lucasem.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucasem/workerpool"
homepage = "https://github.com/lucasem/workerpool"
documentation = "https://docs.rs/workerpool"
description = """
A thread pool for running a number of jobs on a fixed set of stateful worker threads.
"""
keywords = ["worker", "thread", "pool", "threading", "parallelism"]
categories = ["concurrency", "os"]

[features]
crossbeam = ["crossbeam-channel"]

[dependencies]
num_cpus = "1.7"
parking_lot = "0.7"
crossbeam-channel = { version = "0.3", optional = true }
